Fix spacing for product page.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1000,6 +1000,10 @@ input[type="number"] {
   margin-bottom: 2rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .block {
   display: block;
 }
